--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="text">
     <p class="first-line">Legyen Ön is <b>Partner</b></p>
     <p class="second-line">itt kiadhatja a megüresedett nyaralóhelyeit ,</p>
-    <p class="third-line"><mark>kattintson ide</mark> a kezdéshez .</p>
+    <p class="third-line"><mark routerLink="/information">kattintson ide</mark> a kezdéshez .</p>
     <br>
     <p class="first-line">Csak böngészni jött ?</p>
-    <p class="second-line"><mark>regisztráljon</mark> vagy <mark>jelentkezzen be</mark> és lefoglalhatja</p>
+    <p class="second-line"><mark routerLink="/auth/register">regisztráljon</mark> vagy <mark routerLink="/auth/login">jelentkezzen be</mark> és lefoglalhatja</p>
     <p class="third-line">a megkedvelt <b class="thin-bold">szállásokat</b> .</p>
 </div>
 
