--- a/src/app/accommodations/accommodations.component.html
+++ b/src/app/accommodations/accommodations.component.html
@@ -15,8 +15,8 @@
       </p>
     </mat-card-content>
     <p class="actions">
-      <button mat-button>TÖBB KÉP</button>
-      <button mat-button class="reserve">FOGLALÁS</button>
+      <!--<button mat-button routerLink="/accommodations/{{acco.id}}">MEGTEKINTÉS</button>-->
+      <button mat-button [routerLink]="['/', 'accommodations', acco.id]">MEGTEKINTÉS</button>
     </p>
   </mat-card>
 </div>
