--- a/src/app/accommodations/accommodations.component.scss
+++ b/src/app/accommodations/accommodations.component.scss
@@ -32,7 +32,7 @@
 }
 
 .mat-card-subtitle {
-    margin-left: -16px;
+    margin-left: -12px;
     font-size: large;
 }
 
@@ -47,20 +47,20 @@
 }
 
 .actions {
-    width: 220px;
-    min-width: 220px;
+    width: 150px;
+    min-width: 150px;
     margin-left: auto;
 }
 
-.reserve {
+button {
     margin-left: 10px;
     background-color: #3F51B5;
     color: white;
 }
 
 .mat-toolbar {
-    max-width: 160px;
-    min-width: 160px;
+    max-width: 155px;
+    min-width: 155px;
     height: 600px;
     border: 2px solid #3F51B5;
     border-radius: 5px;
