--- a/src/app/create-accommodation/create-accommodation.component.html
+++ b/src/app/create-accommodation/create-accommodation.component.html
@@ -1,24 +1,34 @@
-<h1>Szállás kiadása</h1>
-<form (submit)="submit($event)">
-    <mat-form-field appearance="fill">
-        <mat-label>Név</mat-label>
-        <input matInput type="text" name="name" required>
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="fill">
-        <mat-label>Hely</mat-label>
-        <input matInput type="text" name="place" required>
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="fill">
-        <mat-label>Leírás</mat-label>
-        <textarea matInput name="label" required></textarea>
-    </mat-form-field>
-    <br>
-    <mat-form-field appearance="fill">
-        <mat-label>Kép</mat-label>
-        <input matInput type="text" name="mainImage">
-    </mat-form-field>
-    <br>
-    <button mat-button color="accent">Elküldés</button>
+<h1 mat-dialog-title>Szállás kiadása</h1>
+
+<form mat-dialog-content [formGroup]="accommodationForm" (ngSubmit)="submitCreate()">
+  <mat-form-field class="full-width" appearance="fill">
+    <mat-label>Név</mat-label>
+    <input matInput type="text" name="name" required minlength="3" formControlName="name" />
+    <mat-error *ngIf="name.invalid">
+      {{ name.errors! | appErrors }}
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field class="full-width" appearance="fill">
+    <mat-label>Hely</mat-label>
+    <input matInput type="text" name="place" required minlength="3" formControlName="place" />
+    <mat-error *ngIf="place.invalid">
+      {{ place.errors! | appErrors }}
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field class="full-width" appearance="fill">
+    <mat-label>Hosszabb leírás</mat-label>
+    <textarea matInput name="label" required minlength="20" formControlName="label"></textarea>
+    <mat-error *ngIf="label.invalid">
+      {{ label.errors! | appErrors }}
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field class="full-width" appearance="fill">
+    <mat-label>Kép feltöltése</mat-label>
+    <input matInput type="text" name="mainImage" required minlength="3" formControlName="mainImage" />
+    <!--<mat-error *ngIf="name.invalid">
+      {{ name.errors! | appErrors }}
+    </mat-error>-->
+  </mat-form-field>
+
 </form>
+<button (click)="submitCreate()" mat-raised-button color="primary">Elküldés</button>
