--- a/src/app/create-accommodation/create-accommodation.component.scss
+++ b/src/app/create-accommodation/create-accommodation.component.scss
@@ -5,3 +5,17 @@ h1 {
 form {
     margin-left: 300px;
 }
+
+::ng-deep .normal{
+    border: 1px solid rgba(0, 0, 0, 0.300); 
+    background-color: #F5F5F5;
+    color:#3F51B5;
+    font-weight: 500;
+}
+
+::ng-deep .error{
+    border: 1px solid rgba(0, 0, 0, 0.300); 
+    background-color: #F5F5F5;
+    color:red;
+    font-weight: 500;
+}
