--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,8 +1,8 @@
 @import '~@angular/material/theming';
 @include mat-core();
 
-$my-app-primary: mat-palette($mat-gray, 100);
-$my-app-accent:  mat-palette($mat-indigo, 500);
+$my-app-primary: mat-palette($mat-indigo, 500);
+$my-app-accent:  mat-palette($mat-gray, 100);
 $my-app-warn:    mat-palette($mat-deep-orange, 500);
 
 $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
