--- a/src/app/accommodations/accommodations.component.html
+++ b/src/app/accommodations/accommodations.component.html
@@ -2,6 +2,9 @@
   <mat-toolbar>
     <span>Szűrés:</span>
   </mat-toolbar>
+  <!--<mat-toolbar *ngIf="accommodations && accommodations.length > 0">
+    <span>Szűrés:</span>
+  </mat-toolbar>-->
 
   <mat-card class="accommodation-card" *ngFor="let acco of accommodations">
     <img class="main-image" src={{acco.mainImage}}>
@@ -16,7 +19,10 @@
     </mat-card-content>
     <p class="actions">
       <!--<button mat-button routerLink="/accommodations/{{acco.id}}">MEGTEKINTÉS</button>-->
-      <button mat-button [routerLink]="['/', 'accommodations', acco.id]">MEGTEKINTÉS</button>
+      <button mat-button [routerLink]="['/', 'accommodations', 'id', acco.id]">MEGTEKINTÉS</button>
     </p>
   </mat-card>
+  <!--<div *ngIf="!accommodations || accommodations.length === 0">
+    <p class="notfound">Nem található szállás.</p>
+  </div>-->
 </div>
