--- a/src/app/accommodations/accommodations.component.scss
+++ b/src/app/accommodations/accommodations.component.scss
@@ -68,3 +68,23 @@ button {
     float: left;
     overflow: auto;
 }
+
+.notfound {
+    font-weight: lighter;
+    font-size: xx-large;
+    text-align: center;
+}
+
+::ng-deep .normal{
+    border: 1px solid rgba(0, 0, 0, 0.300); 
+    background-color: #F5F5F5;
+    color:#3F51B5;
+    font-weight: 500;
+}
+
+::ng-deep .error{
+    border: 1px solid rgba(0, 0, 0, 0.300); 
+    background-color: #F5F5F5;
+    color:red;
+    font-weight: 500;
+}
