--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -28,3 +28,28 @@
     margin-right: 10px;
     margin-inline-start: auto;
 }
+
+input {
+    max-width: 50%;
+    min-width: 720px;
+    height: 63px;
+    border: 0px;
+
+    font-size: x-large;
+    font-weight: lighter;
+    letter-spacing: 1px;
+}
+
+input:active {
+    border: 0px;
+    outline: none;
+}
+
+input:focus {
+    border: 0px;
+    outline: none;
+}
+
+input::placeholder {
+    font-size: x-large;
+}
