--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,8 +38,12 @@
     font-weight: lighter;
 }
 
-.menu-button {
+.partner-menu-button {
     color: #3F51B5;
+}
+
+.admin-menu-button {
+    color: red;
 }
 
 .mat-menu-item {
