--- a/src/app/accommodations/accommodations.component.html
+++ b/src/app/accommodations/accommodations.component.html
@@ -7,14 +7,14 @@
   </mat-toolbar>-->
 
   <mat-card class="accommodation-card" *ngFor="let acco of accommodations">
-    <img class="main-image" src={{acco.mainImage}}>
+    <img class="main-image" src="src/assets/img/noimage.jpg">
     <mat-card-header>
       <mat-card-title>{{ acco.name }}</mat-card-title>
       <mat-card-subtitle>{{ acco.place }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p>
-        {{ acco.label }}
+        {{ acco.description }}
       </p>
     </mat-card-content>
     <p class="actions">
