--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -3,4 +3,7 @@
         <input matInput type="text" name="search" onfocus="this.select()" placeholder="Írja be az úticélt" [(ngModel)]="filterText"/>
         <button mat-button class="search-button" [routerLink]="['/', 'accommodations', filterText]" (click)="clearSearch()">Keresés</button>
     </mat-toolbar>
+    <button mat-button class="search-button-alternative">Legkedveltebb szállások</button>
+    <!--<button mat-button class="search-button-alternative" [routerLink]="['/', 'accommodations']" (click)="randomId()">Válassz nekem!</button>-->
+    <button mat-button class="search-button-alternative" (click)="randomId()">Válassz nekem!</button>
 </mat-toolbar>
