--- a/src/app/accommodations/accommodations.component.html
+++ b/src/app/accommodations/accommodations.component.html
@@ -9,7 +9,7 @@
   <mat-card class="accommodation-card" *ngFor="let acco of (accommodations | async)">
     <img class="main-image" src="src/assets/img/noimage.jpg">
     <mat-card-header>
-      <mat-card-title>{{ acco.name }}</mat-card-title>
+      <mat-card-title>{{ acco.name }} id: {{ acco.id}}</mat-card-title>
       <mat-card-subtitle>{{ acco.place }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
@@ -19,9 +19,11 @@
     </mat-card-content>
     <p class="actions">
       <!--<button mat-button routerLink="/accommodations/{{acco.id}}">MEGTEKINTÉS</button>-->
-      <button mat-button [routerLink]="['/', 'accommodations', 'id', acco.id]">MEGTEKINTÉS</button>
+      <button *ngIf="isLoggedIn" mat-button [routerLink]="['/', 'accommodations', 'id', acco.id]">MEGTEKINTÉS</button>
+      <button *ngIf="!isLoggedIn" mat-button class="disabled" disabled>MEGTEKINTÉS</button>
     </p>
   </mat-card>
+  <mat-paginator *ngIf="this.as.allAccommodations" [length]="this.as.allAccommodations" [pageSize]="3" [hidePageSize]="true" (page)="getPageData($event)"></mat-paginator>
   <!--<div *ngIf="!accommodations || accommodations.length === 0">
     <p class="notfound">Nem található szállás.</p>
   </div>-->
