--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar class="search-bar-container">
     <mat-toolbar class="search-bar">
         <input matInput type="text" name="search" onfocus="this.select()" placeholder="Írja be az úticélt" [(ngModel)]="filterText"/>
-        <button mat-button class="search-button" [routerLink]="['/', 'accommodations', filterText]" (click)="clearSearch()">Keresés</button>
+        <button *ngIf="!filterText" mat-button class="search-button" [routerLink]="['search/' + 1]" (click)="clearSearch()">Keresés</button>
+        <button *ngIf="filterText" mat-button class="search-button" [routerLink]="['search/filter/' + filterText]" (click)="clearSearch()">Keresés</button>
     </mat-toolbar>
     <button mat-button class="search-button-alternative">Legkedveltebb szállások</button>
     <!--<button mat-button class="search-button-alternative" [routerLink]="['/', 'accommodations']" (click)="randomId()">Válassz nekem!</button>-->
