javitasok, auth, register, filter, paginator

--- a/src/app/accommodation-details/accommodation-details.component.html
+++ b/src/app/accommodation-details/accommodation-details.component.html
@@ -1,4 +1,6 @@
-{{ accommodation.id }}
+<div *ngIf="accommodation">
+    {{accommodation!.id}}
+</div>
 <!--<div class="grid">
 <mat-form-field appearance="fill" class="example-form-field">
     <mat-date-range-input [formGroup]="reserveForm" (ngSubmit)="submitReserve( acco )" [rangePicker]="rangePicker"
