--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
                 <button mat-menu-item routerLink="/information">Információk</button>
             </mat-menu>
             <button mat-button>Lefoglalt szállások</button>
-            <button *ngIf="!isLoggedIn" mat-button routerLink="/auth/login">Bejelentkezés</button>
+            <button *ngIf="!isLoggedIn" mat-button routerLink="/auth">Bejelentkezés</button>
             <button *ngIf="isLoggedIn" mat-button (click)="logout()">Kijelentkezés</button>
         </div>
     </mat-toolbar>
