--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,13 @@
     <p class="third-line"><mark routerLink="/information">kattintson ide</mark> a kezdéshez .</p>
     <br>
     <p class="first-line">Csak böngészni jött ?</p>
-    <p class="second-line"><mark routerLink="/auth/register">regisztráljon</mark> vagy <mark routerLink="/auth/login">jelentkezzen be</mark> és lefoglalhatja</p>
+    <p class="second-line">
+        <mark *ngIf="!isLoggedIn" routerLink="/auth">regisztráljon</mark> 
+        <mark *ngIf="isLoggedIn">regisztráljon</mark>
+        vagy 
+        <mark *ngIf="!isLoggedIn" routerLink="/auth">jelentkezzen be</mark>
+        <mark *ngIf="isLoggedIn">jelentkezzen be</mark>
+         és lefoglalhatja</p>
     <p class="third-line">a megkedvelt <b class="thin-bold">szállásokat</b> .</p>
 </div>
 
