--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -66,3 +66,18 @@ input:focus {
 input::placeholder {
     font-size: x-large;
 }
+
+::ng-deep .normal{
+    border: 1px solid rgba(0, 0, 0, 0.300); 
+    background-color: #F5F5F5;
+    color:#3F51B5;
+    font-weight: 500;
+}
+
+::ng-deep .error{
+    width: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.300); 
+    background-color: #F5F5F5;
+    color:red;
+    font-weight: 500;
+}
