--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,9 +1,17 @@
 <mat-toolbar class="search-bar-container">
     <mat-toolbar class="search-bar">
         <input matInput type="text" name="search" onfocus="this.select()" placeholder="Írja be az úticélt" [(ngModel)]="searchText"/>
-        <button *ngIf="!searchText" mat-button class="search-button" [routerLink]="['search/1']" (click)="clearSearch()">Keresés</button>
-        <button *ngIf="searchText" mat-button class="search-button" [routerLink]="['search/filter/' + formatSearchText() + '/1']" (click)="clearSearch()">Keresés</button>
+        <button *ngIf="!searchText" mat-button class="search-button" 
+        [routerLink]="['search']" 
+        [queryParams]="{page: '1'}"
+        (click)="clearSearch()">Keresés</button>
+
+        <button *ngIf="searchText" mat-button class="search-button" 
+        [routerLink]="['search']"
+        [queryParams]="{filter: formatSearchText() ,page: '1'}"
+        (click)="clearSearch()">Keresés</button>
     </mat-toolbar>
     <button mat-button class="search-button-alternative">Legkedveltebb szállások</button>
-    <button mat-button class="search-button-alternative" (click)="randomId()">Válassz nekem!</button>
+    <button mat-button class="search-button-alternative-slim1" (click)="randomId()">Válassz nekem!</button>
+    <button mat-button class="search-button-alternative-slim2" (click)="randomIdWithFilter()">Válassz úticél szerint!</button>
 </mat-toolbar>
