--- a/src/app/accommodation-details/accommodation-details.component.html
+++ b/src/app/accommodation-details/accommodation-details.component.html
@@ -1,6 +1,9 @@
 <div *ngIf="accommodation">
     {{accommodation!.id}}
 </div>
+<button *ngIf="this.as.savedPage != -3" mat-button class="back-button" (click)="resetUrl()" [routerLink]="['/search']"
+    [queryParams]="{filter: this.as.savedFilter ,page: currentPage}">Vissza</button>
+<button *ngIf="this.as.savedPage == -3" mat-button class="back-button" [routerLink]="['/search']">Vissza</button>
 <!--<div class="grid">
 <mat-form-field appearance="fill" class="example-form-field">
     <mat-date-range-input [formGroup]="reserveForm" (ngSubmit)="submitReserve( acco )" [rangePicker]="rangePicker"
@@ -21,3 +24,5 @@
 <button mat-button>TÖBB KÉP</button>
 <button mat-button class="reserve" (click)="rangePicker.open()">FOGLALÁS</button>
 </div>-->
+<br>
+<button mat-button class="reservation-button" (click)="submitReserve()">Küldés</button>
