--- a/src/app/accommodations/accommodations.component.scss
+++ b/src/app/accommodations/accommodations.component.scss
@@ -11,6 +11,7 @@
     margin-bottom: 8px;
     //overflow: hidden;
     border: 1px solid rgba(0, 0, 0, 0.400);
+    background-color: #F5F5F5;
 }
 
 .main-image {
@@ -59,7 +60,7 @@ button {
 }
 
 .disabled {
-    background-color: #F5F5F5;
+    background-color: #3f51b570;
 }
 
 .mat-toolbar {
@@ -71,6 +72,12 @@ button {
     box-shadow: 0px 1px #94a1e7;
     float: left;
     overflow: auto;
+}
+
+.mat-card:not([class*=mat-elevation-z]) {
+    box-shadow: 0 2px 1px -1px rgba(0,0,0,1), 
+                0 1px 1px 0 rgba(0,0,0,1), 
+                0 1px 3px 0 rgba(0,0,0,1);
 }
 
 .notfound {
