--- a/src/app/reserved-accommodations/reserved-accommodations.component.scss
+++ b/src/app/reserved-accommodations/reserved-accommodations.component.scss
@@ -4,13 +4,14 @@
 }
 
 .accommodation-card {
-    max-width: 100%;
+    margin: auto;
+    max-width: 80%;
     min-width: 680px;
     height: 250px;
-    margin-left: 18%;
     margin-bottom: 8px;
     //overflow: hidden;
     border: 1px solid rgba(0, 0, 0, 0.400);
+    background-color: #F5F5F5;
 }
 
 .main-image {
@@ -71,6 +72,12 @@ button {
     box-shadow: 0px 1px #94a1e7;
     float: left;
     overflow: auto;
+}
+
+.mat-card:not([class*=mat-elevation-z]) {
+    box-shadow: 0 2px 1px -1px rgba(0,0,0,1), 
+                0 1px 1px 0 rgba(0,0,0,1), 
+                0 1px 3px 0 rgba(0,0,0,1);
 }
 
 .notfound {
