--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             <button mat-button [matMenuTriggerFor]="partnermenu" class="partner-menu-button">Partnereknek</button>
             <mat-menu #partnermenu="matMenu">
                 <button mat-menu-item routerLink="/new-accommodation">Új szállás felvétele </button>
-                <button mat-menu-item >Szállások kezelése</button>
+                <button mat-menu-item routerLink="/management-accommodations">Szállások kezelése</button>
                 <button mat-menu-item routerLink="/information">Információk</button>
             </mat-menu>
             <button mat-button routerLink="/reserved-accommodations">Lefoglalt szállások</button>
