--- a/src/app/reserved-accommodations/reserved-accommodations.component.html
+++ b/src/app/reserved-accommodations/reserved-accommodations.component.html
@@ -1,5 +1,5 @@
 <mat-card class="accommodation-card" *ngFor="let acco of (accommodations | async)">
-<img class="main-image" src="src/assets/img/noimage.jpg">
+<img class="main-image" src="./assets/img/noimage.png">
 <mat-card-header>
     <mat-card-title>{{ acco.name }} id: {{ acco.id}}</mat-card-title>
     <mat-card-subtitle>{{ acco.place }}</mat-card-subtitle>
