--- a/src/app/accommodations/accommodations.component.html
+++ b/src/app/accommodations/accommodations.component.html
@@ -7,7 +7,7 @@
     </mat-toolbar>-->
 
   <mat-card class="accommodation-card" *ngFor="let acco of (accommodations | async)">
-    <img class="main-image" src="src/assets/img/noimage.jpg">
+    <img class="main-image" src="./assets/img/noimage.png">
     <mat-card-header>
       <mat-card-title>{{ acco.name }} id: {{ acco.id}}</mat-card-title>
       <mat-card-subtitle>{{ acco.place }}</mat-card-subtitle>
@@ -20,8 +20,8 @@
     <p class="actions">
       <!--<button mat-button routerLink="/accommodations/{{acco.id}}">MEGTEKINTÉS</button>-->
       <button *ngIf="isLoggedIn" (click)="saveUrl()" mat-button
-        [routerLink]="['../accommodations/' + acco.id]">LEFOGLALÁS</button>
-      <button *ngIf="!isLoggedIn" mat-button class="disabled" disabled>LEFOGLALÁS</button>
+        [routerLink]="['../accommodations/' + acco.id]">MEGTEKINTÉS</button>
+      <button *ngIf="!isLoggedIn" mat-button class="disabled" disabled>MEGTEKINTÉS</button>
     </p>
   </mat-card>
   <mat-paginator #paginator *ngIf="this.ss.countAccommodations" [length]="this.ss.countAccommodations" [pageSize]="3"
