--- a/src/app/accommodations/accommodations.component.html
+++ b/src/app/accommodations/accommodations.component.html
@@ -9,7 +9,7 @@
   <mat-card class="accommodation-card" *ngFor="let acco of (accommodations | async)">
     <img class="main-image" src="./assets/img/noimage.png">
     <mat-card-header>
-      <mat-card-title>{{ acco.name }} id: {{ acco.id}}</mat-card-title>
+      <mat-card-title>{{ acco.name }}</mat-card-title>
       <mat-card-subtitle>{{ acco.place }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
@@ -21,7 +21,7 @@
       <!--<button mat-button routerLink="/accommodations/{{acco.id}}">MEGTEKINTÉS</button>-->
       <button *ngIf="isLoggedIn" (click)="saveUrl()" mat-button
         [routerLink]="['../accommodations/' + acco.id]">MEGTEKINTÉS</button>
-      <button *ngIf="!isLoggedIn" mat-button class="disabled" disabled>MEGTEKINTÉS</button>
+      <button *ngIf="!isLoggedIn" mat-button matTooltip="Bejelentkezés szükséges" matTooltipPosition="right" class="disabled">MEGTEKINTÉS</button>
     </p>
   </mat-card>
   <mat-paginator #paginator *ngIf="this.ss.countAccommodations" [length]="this.ss.countAccommodations" [pageSize]="3"
