--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,27 +5,35 @@
     <br>
     <p class="first-line">Csak böngészni jött ?</p>
     <p class="second-line">
-        <mark *ngIf="!isLoggedIn" routerLink="/auth">regisztráljon</mark> 
+        <mark *ngIf="!isLoggedIn" routerLink="/auth">regisztráljon</mark>
         <mark *ngIf="isLoggedIn">regisztráljon</mark>
-        vagy 
+        vagy
         <mark *ngIf="!isLoggedIn" routerLink="/auth">jelentkezzen be</mark>
         <mark *ngIf="isLoggedIn">jelentkezzen be</mark>
-         és lefoglalhatja</p>
+        és lefoglalhatja
+    </p>
     <p class="third-line">a megkedvelt <b class="thin-bold">szállásokat</b> .</p>
 </div>
-
+<p class="title">Ajánlott úticélok</p>
 <div class="alt-search">
     <mat-grid-list cols="3" rowHeight="1:1">
-        <mat-grid-tile>1</mat-grid-tile>
-        <mat-grid-tile>2
-            <mat-grid-tile-header>
-                <h3> header example </h3>
-              </mat-grid-tile-header>
-        </mat-grid-tile>
-        <mat-grid-tile>3
+        <mat-grid-tile class="left-tile" [routerLink]="['search']" [queryParams]="{filter: 'Budapest' ,page: '1'}">
+            <img src="assets/img/budapest.jpg" alt="budapest" layout-fill>
             <mat-grid-tile-footer>
-                <h3> footer example</h3>
-              </mat-grid-tile-footer>
+                Budapest
+            </mat-grid-tile-footer>
         </mat-grid-tile>
-      </mat-grid-list>
+        <mat-grid-tile class="middle-tile" [routerLink]="['search']" [queryParams]="{filter: 'Siófok' ,page: '1'}">
+            <img src="assets/img/siofok.jpg" alt="siofok" layout-fill>
+            <mat-grid-tile-footer>
+                Siófok
+            </mat-grid-tile-footer>
+        </mat-grid-tile>
+        <mat-grid-tile class="right-tile" [routerLink]="['search']" [queryParams]="{filter: 'Hévíz' ,page: '1'}">
+            <img src="assets/img/heviz.jpg" alt="heviz" layout-fill>
+            <mat-grid-tile-footer>
+                Hévíz
+            </mat-grid-tile-footer>
+        </mat-grid-tile>
+    </mat-grid-list>
 </div>
